<resources>
    <string name="app_name">JPZJWeather</string>

    <string name="hello_world">Hello world!</string>

    <!-- menu action-->
    <string name="action_settings">Settings</string>
    <string name="action_share">分享</string>
    <string name="action_search">查询城市</string>
    <string name="action_about">关于</string>

    <!-- service address -->
    <string name="service_weatherData_address">http://172.18.172.233:8080/WeatherService/GetWeatherData?city=</string>
    <string name="service_furWeather24_address">http://172.18.172.233:8080/WeatherService/GetFurtWeather24?city=</string>

    <string name="service_weatherData_address_temp">http://172.17.149.55:8080/WeatherService/GetWeatherData?city=</string>
    <string name="service_furWeather24_address_temp">http://172.17.149.55:8080/WeatherService/GetFurtWeather24?city=</string>

    <!-- main toolbar -->
    <string name="main_title_select_city">选择城市</string>
    <string name="main_title_select_share">分享</string>
    <string name="main_title_city_name">城市</string>
    <string name="main_title_current_time">当前时间</string>
    <string name="main_location_icon">定位图标</string>

    <!-- index List -->
    <string name="weather_main_index_title">指数</string>
    <string name="weather_main_index_title_icon">{fa-skyatlas}</string>
    <string name="action_add_city">添加城市</string>

    <!-- select toolbar-->
    <string name="select_title_select_cityList">城市列表</string>
    <string name="select_city_icon">{fa-location-arrow}</string>
    <string name="select_city_delete_icon">{fa-trash-o}</string>
    <string name="select_back_icon">{fa-arrow-left}</string>
    <string name="select_check_icon">{fa-check}</string>

    <!-- today fragment top-->
    <string name="weather_fragment_today_icon_aqi">{fa-leaf}</string>
    <string name="weather_fragment_top_icon_location_arrow">{fa-location-arrow}</string>

    <!-- bottom tabs -->
    <string name="bottom_tab_weather_main_text">天气</string>
    <string name="bottom_tab_weather_main_icon">{fa-cloud}</string>
    <string name="bottom_tab_immediate_view_text">时景</string>
    <string name="bottom_tab_immediate_view_icon">{fa-photo}</string>
    <string name="bottom_tab_weather_hist_text">历史天气</string>
    <string name="bottom_tab_weather_hist_icon">{fa-history}</string>
    <string name="bottom_tab_user_text">我</string>
    <string name="bottom_tab_user_icon">{fa-user}</string>

    <string-array name="host_city_list">
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
        <item>天津</item>
        <item>重庆</item>
        <item>西安</item>
        <item>成都</item>
        <item>杭州</item>
        <item>南京</item>
        <item>苏州</item>
        <item>武汉</item>
        <item>东莞</item>
        <item>宁波</item>
        <item>厦门</item>
        <item>福州</item>
        <item>昆明</item>
        <item>沈阳</item>
        <item>长春</item>
        <item>大连</item>
        <item>济南</item>
        <item>郑州</item>
        <item>长沙</item>
        <item>合肥</item>
        <item>哈尔滨</item>
        <item>石家庄</item>
        <item>南昌</item>
        <item>佛山</item>
        <item>珠海</item>
        <item>无锡</item>
        <item>青岛</item>
        <item>呼和浩特</item>
        <item>乌鲁木齐</item>
        <item>香港</item>
        <item>澳门</item>
        <item>台北</item>
    </string-array>
</resources>
